# ENS-Retro-Data

./: .dockerignore  .env  .env.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.api  Dockerfile.dagster  LICENSE  LICENSE-CODE  LICENSE-DATA  README.md  SECURITY.md  TODOS.md  fly.toml  pyproject.toml  render.yaml  taxonomy.yaml  workspace.yaml
.dagster/: dagster.yaml
.dagster/.telemetry/: id.yaml
.dagster/storage/: .db  015e93f5-6e15-4577-a819-bde285c925d4.db  0b9177b5-3376-4eb9-b449-5a44a57b61a4.db  0dbfae39-7c7c-4198-99bf-cfe19cb3efa7.db  0f49243b-d25d-4b75-9db6-46edfb562016.db  122a3fc6-1230-4c3c-95c7-37f9bc10e9f2.db  17455790-3bbd-49be-a5cb-9fe86d635b84.db  2bb06341-9615-48ca-ba27-2121b252ec06.db  39d7b0b7-a9a0-4533-bba0-8a01c70331e0.db  3cf657c5-2016-4b3f-ba95-bd4a74ab9da9.db  487d5202-3bce-4a78-8b29-a25cdb7a9554.db  5602757d-51eb-4093-9ec6-ae756b6c4c0a.db  (+39 more)
.do/: MIGRATION.md  app.yaml
DEV/: ChatkitSetup.md
Phase 1/: metadata.json
bronze/docs/: metadata.json
dashboards/: README.md  addChatKit.md  api.py  app.py  config.yaml  requirements-api.txt  requirements.txt
docs/: ROADMAP.md  api-reference.md  architecture.md  bronze-layer.md  commands.md  dagster-dbt-integration.md  data-validation.md  dbt-models.md  log.md  plan.md  schema-report.md  taxonomy-guide.md
infra/: dbt_assets.py  dbt_project.py  definitions.py  io_managers.py  resources.py  sensors.py  taxonomy.py
scripts/: capture_dashboard_screenshots.py  generate_chart_catalog.py  generate_schema_map.py  generate_taxonomy_seeds.py  runs.sh  serve.sh  spaces_sync.py  sync_vector_store.py
tests/: conftest.py  test_ingest_smoke.py  test_snapshot_api.py  test_tally_flatteners.py  test_taxonomy.py  test_validate_helpers.py
warehouse/: ens_retro.duckdb
(+357 files in other folders)
