[project]
name = "ens-retro-data"
version = "0.1.0"
description = "Data infrastructure for ENS DAO retrospective evaluation"
requires-python = ">=3.11"
dependencies = [
    "dagster>=1.9",
    "dagster-dbt>=0.25",
    "dagster-webserver>=1.9",
    "dbt-core>=1.9",
    "dbt-duckdb>=1.9",
    "duckdb>=1.1",
    "great-expectations>=1.3",
    "numpy>=1.26",
    "pandas>=2.2",
    "polars>=1.0",
    "pyarrow>=18.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "pyoso>=0.6",
    "requests>=2.31",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["infra"]

[tool.dagster]
module_name = "infra.definitions"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
